--- a/frontend/src/pages/InformacaoLivro.module.css
+++ b/frontend/src/pages/InformacaoLivro.module.css
@@ -19,15 +19,15 @@
     .linhaHorizontal {
       width: 100%;
       border: 0.05px outset rgba(144, 202, 252, 0.26);
-      margin-top: 2em;
-      margin-bottom: 2em;
+      margin-top: 1em;
+      margin-bottom: 1.5em;
   }
   
     
   .gridContainer {
     display: grid;
     grid-template-columns: 20em 35em 20em;
-    grid-template-rows: 24em;
+    grid-template-rows: 27em;
     gap: 1em;
     color: #146b97;  
   }
@@ -36,12 +36,12 @@
     font-size: 30px;
     text-align: center;
     color: #146b97;  
-    max-height: 400px;
+    max-height: 700px;
     overflow: auto;
   }
 
     .containerInfoLivro {
-    max-height: 400px;
+    max-height: 700px;
     overflow: auto;
     justify-content: center;
     align-items: center;
@@ -73,6 +73,46 @@
     font-weight: bold;
   }
 
+.tipoLivroDetalhe{
+  display: flex;
+  justify-content: space-around;
+}
+  
+ .buttonTipoLivroFisico, .buttonTipoLivroEbook{
+    color: #146b97; 
+    font-size: 14px;
+    font-weight: bold;
+    height: 3em;
+    width: 15em;
+    background:rgb(205, 231, 255);
+    margin: 5px 0 5px 0;
+
+  }
+
+
+/*   
+  .buttonTipoLivroFisico:hover, .buttonTipoLivroEbook:hover{
+    cursor: pointer;
+    background:rgba(192, 225, 255, 0.448);
+    text-decoration: none;
+    color: #146b97bd; 
+  } */
+
+  .buttonTipoLivroFisico:focus, .buttonTipoLivroEbook:focus{
+    background-color: #033579;
+    color: white;
+  }
+  
+  
+
+      
+  .linhaHorizontalDetalhe {
+    width: 100%;
+    border: 0.05px outset rgba(144, 202, 252, 0.26);
+    margin-top: 0.2em;
+    margin-bottom: 0.22em;
+}
+
   .sinopse{
     text-align: justify;
     font-size: 14px;
@@ -80,11 +120,12 @@
   }
 
   .divComprarLivros{
-    background:rgb(205, 231, 255);
+    background:rgb(243, 249, 255);
     border-radius: 15px;
     padding: 30px;
     box-shadow: 2px 2px 12px 2px rgba(1, 23, 61, 0.22);
   }
+
 
 
   .compra {
@@ -92,6 +133,75 @@
     justify-content: space-between;
     align-items: center;
   }
+
+  .ulCompraInfo, .ulCompraInfoEntrega, .ulCompraInfoTipo{
+    display: flex;
+    justify-content: space-between;
+    padding: 2px;
+    flex-wrap: nowrap;
+    font-size: 15px;
+    color: #033579;
+    margin-bottom: 0;
+    list-style-type: none;
+
+  }
+ 
+  .ulCompraInfoEntrega{
+    margin-top: 20px; 
+  }
+  
+  .ulCompraInfoTipo{
+    font-weight: 800; 
+    color: #146b97; 
+
+  }
+
+  .liCompraInfoTit, .ulCompraInfoTipo{
+    font-weight: 800; 
+    margin-bottom: 15px;  
+
+  }
+
+  .liEntrega {
+    font-weight: 700; 
+    color: #4dbaf0;
+ 
+  }
+
+  .estoque{
+    font-weight: 800; 
+    font-size: 18px;
+    color: #21bbf3;
+  }
+
+
+.buttonCompra{
+    width: 100%;
+    height: 2.3em;
+    border-radius: 10px;
+    text-align: center;  
+    background: #033579;
+    border: none;
+    margin-top: 15px;   
+    cursor: pointer;
+  }
+
+  .h1AdicionarSacola{
+
+    font-size: 12px;
+    text-align: center;  
+    font-weight: bold;
+    margin: 0;
+    color: #ffff;
+  }
+
+  .buttonCompra:hover{
+    background: #033479d4;
+  }
+
+
+
+
 
 
   .precoAntigo{
@@ -154,32 +264,6 @@
 
 
 
-  .buttonAdicionarSacola, .buttonCompra{
-    width: 100%;
-    height: 2em;
-    border-radius: 10px;
-    text-align: center;  
-    background: #033579;
-    border: none;
-    margin-bottom: 10px;   
-    cursor: pointer;
-  }
-
-  .h1AdicionarSacola{
-    color: aliceblue;
-    font-size: 12px;
-    text-align: center;  
-    font-weight: bold;
-    margin: 0;
-  }
-
-  .buttonAdicionarSacola:hover, 
-  .buttonCompra:hover{
- 
-    background: #033479cd;
-    text-decoration: none;
-    color: white;
-  }
 
 
   .ficha{
@@ -213,10 +297,10 @@
 
   .fichaH1, .voltarHome{
         text-align: left;
-
-        font-size: 1.5em;
+        font-size: 1.3em;
         margin-left: 0.2em;
-        margin-bottom: 0.5em;
+        margin-bottom: 0.4em;
+        color: #146b97;
   }
 
   .voltarHome{
