--- a/frontend/src/pages/InformacaoLivro.module.css
+++ b/frontend/src/pages/InformacaoLivro.module.css
@@ -179,7 +179,6 @@
     width: 100%;
     height: 2.3em;
     border-radius: 10px;
-    text-align: center;  
     background: #033579;
     border: none;
     margin-top: 15px;   
@@ -187,12 +186,25 @@
   }
 
   .h1AdicionarSacola{
-
     font-size: 12px;
     text-align: center;  
     font-weight: bold;
     margin: 0;
     color: #ffff;
+  }
+
+  
+  .h2AdicionarSacola{
+    color: #033479d4; 
+   text-align: center;  
+    font-weight: bold;
+  }
+
+  .buttonFecharModal{
+    background:#033479d4;
+    border-radius: 50%;
+    width: 2em;
+    height: 1.7em;
   }
 
   .buttonCompra:hover{
