--- a/frontend/src/components/modals/ModalCarrinho.module.css
+++ b/frontend/src/components/modals/ModalCarrinho.module.css
@@ -33,6 +33,7 @@
   background: whitesmoke;
   margin: 0;
   height: 100%;
+
 }
 
 
@@ -64,20 +65,27 @@
 }  
 
 .imgFechar{
-  color: rgba(240, 248, 255, 0.785);
+  color: aliceblue;
   font-size: 1.5em;
-  margin: 0 1em 0 0;
 }
 
 .navBarCarrinhoButton{
   border:none;
-  background-color:transparent;
+  background:  #033579;
   cursor: pointer;
-  /* opacity: 0.8; */
+  width: 2em;
+  height: 2em;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.bodyLista{
+  height: 70%;
+  overflow-y: scroll; 
 }
 
 .listaItemCarrinho{
-
+  width: 100%;
 
 }
 
@@ -89,6 +97,7 @@
   color: #146b97;  
   margin: 0;
   justify-content: center;
+
 }
 
 .divImg{
