--- a/frontend/src/components/modals/ModalNovo.module.css
+++ b/frontend/src/components/modals/ModalNovo.module.css
@@ -16,7 +16,7 @@
   .divContainerNovo{
     position: flex;
     width: 40%;
-    height:90%;
+    height:100%;
     justify-content: center;
     align-items: center; 
     background-color:rgb(189, 223, 253);
@@ -27,7 +27,21 @@
     z-index: 999;
 
   }
-  
+
+  .linhaHorizontal {
+    width: 85%;
+    border: 0.05px outset rgba(144, 202, 252, 0.26);
+    margin-top: 2em;
+    margin-bottom: 1em;
+}
+
+  .containerTipoLivro{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+    
   .buttonContainer {
       display: flex;
       justify-content: center;
@@ -81,7 +95,7 @@
     margin: 0.2em 0 0 0;
     width: 80%;
     height: 2em;
-    padding: 1px;
+    padding: 5px;
     padding-left: 10px;
     border: none;
     border-radius: 7px;
