--- a/frontend/src/pages/Pagamento.module.css
+++ b/frontend/src/pages/Pagamento.module.css
@@ -69,12 +69,12 @@
     font-size: 18px;
     text-align: center;
     border-bottom: 0.05px outset rgba(144, 202, 252, 0.26);
-   
 }
 
 
 .thPagamento, .tdPagamento{
     padding: 15px;
+    background-color: aliceblue;
 }
 
 .tbodyPagamento{
@@ -89,7 +89,20 @@
 /* .trPagamento:nth-child(even){
     background-color: #f2f2f2; 
     color:#6b1f1c} */ 
-
+    select {
+      width: 207px;
+      height: 40px;
+      font-size: 15px;
+      color: #333;
+      background-color: #fff;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      padding: 8px;
+    }
+    select:focus {
+      outline: none;
+    }
+    
 
 .buttonPgtoDelete{
     border: none;
@@ -106,6 +119,8 @@
     color:  #033579;
 
 }
+
+
 
 .buttonPagamento{
     width: 100%;
