--- a/frontend/src/components/carousel/CadastroLivro.module.css
+++ b/frontend/src/components/carousel/CadastroLivro.module.css
@@ -1,9 +1,10 @@
-.containerSmall {
+.containerSmall, .containerLong {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
   }
-  
+
+ 
 
   .inputSinopseCadastrar, .inputImagemCadastrar, .inputCadastrar{
     margin: 0.2em 0 0 0;
@@ -16,6 +17,10 @@
     box-sizing: border-box;
     color: #033579;
     background: aliceblue;
+  }
+
+.inputCadastrar{
+    width: 550px;
   }
   
   .inputSinopseCadastrar::-webkit-scrollbar,
