--- a/frontend/src/components/carousel/CadastroLivro.module.css
+++ b/frontend/src/components/carousel/CadastroLivro.module.css
@@ -40,11 +40,11 @@
   font-weight: bold;
 }
 
-.containerSmall, .containerLong {
+.containerSmall, .containerLong, .containerTtipoLivro{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-  }
+}
 
  
 
