--- a/frontend/src/pages/styles/InformacaoLivro.module.css
+++ b/frontend/src/pages/styles/InformacaoLivro.module.css
@@ -1,6 +1,8 @@
+.container{
+  margin: 0 18% 0 18%;
+}
 
-
-  .container {
+  .containerInformacaoLivro {
       /* position: fixed;
       top: 0;
       left: 0;
