--- a/frontend/src/pages/styles/Pagamento.module.css
+++ b/frontend/src/pages/styles/Pagamento.module.css
@@ -14,6 +14,11 @@
     margin-top: 13vh ;
     text-shadow: 5px 5px 15px rgba(1, 23, 61, 0.22);
   }
+
+  .container{
+    margin: 0 18% 0 18%;
+}
+
   
   .containerPagto{
     display: grid;
