--- a/frontend/src/components/carousel/styles/Carousel.css
+++ b/frontend/src/components/carousel/styles/Carousel.css
@@ -85,3 +85,31 @@
   .slick-next-alt {
     right: -60px;
   }
+
+  @media only screen and (min-width: 320px) and (max-width: 576px) {
+
+    .container{
+
+    }
+    .carousel-wrapper {
+       /* height: 200px; Ajuste a altura desejada para o carrossel em dispositivos móveis */
+      margin: 0;
+      margin-top: 250px;
+ /* Ajuste o espaçamento superior desejado */
+    }
+    
+    .slick-slide img {
+      height: auto;
+      max-width: 100%;
+    }
+  
+    .slick-prev-alt,
+    .slick-next-alt {
+      display: none; /* Oculta os botões de navegação */
+    }
+
+    .tituloCarousel h2{
+      text-align: center;
+    }
+  }
+  
