--- a/frontend/src/components/modals/ModalCarrinho.module.css
+++ b/frontend/src/components/modals/ModalCarrinho.module.css
@@ -4,13 +4,17 @@
   box-sizing: none;
 }
 
-/* .linhaHorizontal {
-  width: 100%;
-  border: 0.05px outset rgba(144, 202, 252, 0.26);
-  margin-top: 2em;
-  margin-bottom: 1em;
-} */
-
+.modalCarrinhoContainer {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+}
 
 .modalBackground {
   position: fixed;
@@ -24,31 +28,33 @@
 
 .modalCarrinho {
   position: fixed;
-  top: 0;
-  right: 0;
-  width: 25%;
-  justify-content: center;
-  align-items: center;
-  z-index: 999;
+  width: 100%;
+  max-height: 80vh;
+  overflow-y: auto;
   background: whitesmoke;
-  margin: 0;
-  height: 100%;
-
+  border-radius: 10px;
+  padding: 20px;
+  z-index: 999;
 }
 
- 
   
 .navBarCarrinho{
   background:  #033579;
   width: 100%;
-  height: 7%;
+  height: 5vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
   text-decoration: none;
+  border-radius: 7px;
 }
 
-
+.linhaHorizontal {
+  width: 100%;
+  border: 0.05px outset rgba(144, 202, 252, 0.26);
+  margin-top: 1em;
+  margin-bottom: 1.5em;
+}
 
 .navBarCarrinhoUl{
   display: flex;
@@ -56,6 +62,67 @@
   padding: 0;
   list-style-type: none;
 }
+
+.containerPagto{
+  display: grid;
+  grid-template-columns: 53em 23em;
+  grid-template-rows: 50em;
+  color: #146b97; 
+  overflow: auto;
+  gap: 1em;
+}
+
+
+.thSecao, .thSecaoInf, .thSecaoTit, .thSecaoTitN{
+  background-color: aliceblue;
+  text-align: left;
+  vertical-align: top;
+  padding: 10px;
+  color: #033579;
+}
+
+.thSecaoTit, .thSecaoTitN{
+  background-color: aliceblue;
+  font-weight: 700;
+  font-size: 1.2em;
+  color: #033579;
+}
+
+.thSecaoTit{
+  width: 12em;
+}
+
+.thSecaoInf{
+  width: 38em;
+}
+
+.tablePagamento{
+    border-collapse: collapse;
+}
+
+select {
+  width:210px;
+  height: 40px;
+  font-size: 15px;
+  color: #333;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 8px;
+}
+select:focus {
+  outline: none;
+}
+
+.ficha{
+  border: solid 1px rgb(205, 231, 255);
+  border-radius: 10px;
+  text-align: center;
+  padding: 20px;
+  box-shadow: 1px 1px 20px 1px rgba(1, 23, 61, 0.042);
+
+}
+
 
 .sacolaH1{
   margin: 4px 0 0 10px;
@@ -79,7 +146,7 @@
 }
 
 .bodyLista{
-  height: 70%;
+  height: 50vh;
   overflow-y: scroll; 
 }
 
@@ -184,21 +251,16 @@
 .totalCarrinho{
   background:  #033579;
   width: 100%;
-  height:23%;
   justify-content: center;
+  border-radius: 7px;
+
 }
 
 .valorCarrinho{
   width: 100%;
   padding: 1.5em;
+  
 }
-
-/* .divCartButtonCompra{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-} */
 
 .carrinhoButtonComprar{
   width: 100%;
@@ -285,20 +347,254 @@
 
 span{
   margin: 15px;
+}
+
+/* Estilos para a barra de rolagem no Google Chrome */
+::-webkit-scrollbar {
+  width: 10px; /* Largura da barra de rolagem */
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Cor de fundo da barra de rolagem */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Cor da barra de rolagem */
+  border-radius: 2px; /* Raio da borda da barra de rolagem */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Cor da barra de rolagem ao passar o mouse */
+}
+
+/* Estilos para a barra de rolagem no Mozilla Firefox */
+/* As propriedades para o Firefox não funcionam em versões mais recentes */
+/* Use o prefixo -moz- para definir as propriedades */
+/* Para versões mais recentes do Firefox, é necessário usar uma solução alternativa com JavaScript */
+
+
+
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  .modalCarrinho {
+    width: 60%;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .thSecao, .thSecaoInf, .thSecaoTit, .thSecaoTitN{
+    background-color: aliceblue;
+    text-align: left;
+    vertical-align: top;
+    padding: 10px;
+    color: #033579;
+  }
+  
+  .thSecaoTit, .thSecaoTitN{
+    background-color: aliceblue;
+    font-weight: 700;
+    font-size: 0.9em;
+    width: 9em;
+  }
+  
+  .thSecaoTit{
+    font-size: 0.9em;
+    width: 9em;
+  }
+  
+  .thSecaoInf{
+    font-size: 0.9em;
+  }
+  
+  
+  .ficha{
+    border: solid 1px rgb(205, 231, 255);
+    border-radius: 10px;
+    text-align: center;
+    padding: 20px;
+    box-shadow: 1px 1px 20px 1px rgba(1, 23, 61, 0.042);
+  
+  }
+  
 
 }
 
-@media (max-width: 768px) {
+@media only screen and (min-width: 992px) {
   .modalCarrinho {
-    width: 35%;
-    top: 2vw;
-
+    width: 40%;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
-@media (min-width: 992px) {
+@media only screen and (min-width: 320px) and (max-width: 576px) {
+  .modalCarrinhoContainer {
+    /* Define the styles for mobile screens */
+    /* Example styles: */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+    overflow: auto;
+  }
+
+  .modalBackground {
+    /* Example styles: */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
   .modalCarrinho {
-    width: 30%;
-    top: 2vw;
+    /* Example styles: */
+    position: relative;
+    width: 90%;
+    max-width: 400px;
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 20px;
+  }
+
+  .bodyLista {
+    padding: 10px;
+  }
+
+  .tableSecao {
+    width: 100%;
+  }
+
+  .thSecaoTitN {
+    display: none;
+  }
+
+  .thSecaoTit {
+    font-size: 1.2em;
+  }
+
+  .listaItemCarrinho {
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    padding: 10px;
+  }
+
+  .containerLista {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .gridListaImg {
+    flex: 0 0 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .divImg {
+    text-align: center;
+  }
+
+  .imagemGrid {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .containerListaInfo {
+    flex: 1 0 100%;
+  }
+
+  .gridListaInfo {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .divComprarLivros {
+    width: 100%;
+  }
+
+  .divTituloExcluir {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .tituloTipoLivro {
+    font-size: 1.1em;
+    margin-bottom: 5px;
+  }
+
+  .tituloItem {
+    font-size: 1.2em;
+    display: flex;
+    align-items: center;
+  }
+
+  .imgExcluirItemCarrinho {
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+
+  .divPreco {
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .precoTit {
+    font-size: 1.1em;
+    margin-right: 10px;
+  }
+
+  .precoAntigo {
+    text-decoration: line-through;
+    color: #999;
+  }
+
+  .precoOferta {
+    font-weight: bold;
+  }
+
+  .precoRegular {
+    font-weight: bold;
+  }
+
+  .qtde {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+  }
+
+  .buttonQtde {
+    background: none;
+    border: none;
+    cursor: pointer;
   }
 }
+
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+  .modalCarrinhoContainer {
+    /* Define the styles for tablet screens */
+  }
+
+  .modalBackground {
+    /* Example styles: */
+    /* ... */
+  }
+
+  .modalCarrinho {
+    /* Example styles: */
+    /* ... */
+  }
+}
+
+
