--- a/frontend/src/pages/styles/Adm.module.css
+++ b/frontend/src/pages/styles/Adm.module.css
@@ -18,3 +18,24 @@
 .containerAdm{
     margin-top: 100px;
 }
+
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+  .container{
+      margin: 0 5% 0 5%;
+  }
+
+}
+
+@media only screen and (min-width: 769px) and (max-width: 992px) {
+  .container{
+      margin: 0 5% 0 5%;
+  }
+
+}
+
+@media only screen and (min-width: 993px) and (max-width: 1200px) {
+
+  .container{
+      margin: 0 5% 0 5%;
+  }
+}
