--- a/frontend/src/pages/styles/InformacaoLivro.module.css
+++ b/frontend/src/pages/styles/InformacaoLivro.module.css
@@ -1,24 +1,12 @@
 .container{
-  margin: 0 18% 0 18%;
+  margin: 7% 18% 0 18%;      
+  justify-content: center;
+  align-items: center;
+      z-index: 1;      
+      text-shadow: 5px 5px 15px rgba(1, 23, 61, 0.22)
 }
-
-  .containerInformacaoLivro {
-      /* position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.811);
-      display: flex; */
-      justify-content: center;
-      align-items: center;
-      z-index: 1;
-      /* background: whitesmoke; */
-      margin-top: 13vh ;
-      text-shadow: 5px 5px 15px rgba(1, 23, 61, 0.22);
-    }
-    
-    .linhaHorizontal {
+   
+.linhaHorizontal {
       width: 100%;
       border: 0.05px outset rgba(144, 202, 252, 0.26);
       margin-top: 1em;
@@ -28,15 +16,16 @@
     
   .gridContainer {
     display: grid;
-    grid-template-columns: 20em 35em 20em;
+    grid-template-columns: 25% 42% 27%; /* Alterado */
     grid-template-rows: 40em;
     gap: 2em;
-    color: #146b97;  
+    color: #146b97;
+    max-width: 100%;
   }
 
     .gridContainerAdm {
     display: grid;
-    grid-template-columns: 18em 42em 15em;
+    grid-template-columns: 25% 42% 27%;
     grid-template-rows: 60em;
     gap: 1em;
     color: #146b97;  
@@ -81,6 +70,7 @@
   .imagemLivro{
     border-radius: 10px;
     box-shadow: 5px 5px 15px 5px rgba(1, 23, 61, 0.22);
+    width: 100%;
   }
 
   .titulo{
@@ -113,12 +103,13 @@
     font-size: 14px;
     font-weight: bold;
     height: 4em;
-    width: 15em;
+
     background:rgb(205, 231, 255);
     margin: 5px 0 5px 0;
     border: none;
     border-radius: 7px;
-
+    max-width: 20em;
+    min-width: 10em;
   }
 
   .textoSinopse {
@@ -201,7 +192,8 @@
 
   .liCompraInfoTit, .ulCompraInfoTipo{
     font-weight: 800; 
-    margin-bottom: 15px;  
+    margin-bottom: 15px; 
+    font-size: 1em; 
 
   }
 
@@ -324,9 +316,6 @@
     background:rgb(192, 225, 255);
   }
 
-  .fichaAdm{
-
-  }
 
   .fichaH1, .fichaH1Adm,.voltarHome{
         text-align: left;
@@ -449,4 +438,177 @@
   height: 1.7em;
 }
   
+
+@media only screen and (max-width: 768px) {
+ 
+}
+
+
+
+@media only screen and (min-width: 577px) and (max-width: 768px) {
+
+  .container{
+    margin: 15% 1% 0 1%;      
+  }
+
+  .divComprarLivros{
+    padding: 3px;
+  }
+
+  .liEntrega {
+  font-size: 0.7em;
+  }
+  .gridContainer {
+    display: grid;
+    grid-template-columns: 18% 42% 30%; /* Alterado */
+  }
+
+.gridContainerAdm {
+    display: grid;
+    grid-template-columns: 18% 52% 25%; /* Alterado */
+  }
+
+
+  .precoOferta{
+    font-size: 0.9em;
+  }
+  .buttonCompra{
+    width: 90%;
+    height: 2.3em;
+    margin: 10px;
+  }
+ 
+  }
+ 
+
+
+@media only screen and (min-width: 769px) and (max-width: 992px) {
+  
+}
+
+@media only screen and (min-width: 993px) and (max-width: 1200px) {
+      
+  .container{
+    margin: 12% 5% 0 5%;      
+  }
+
+  .divComprarLivros{
+    padding: 5px;
+  }
+
+  .liEntrega {
+  font-size: 0.8em;
+
+ 
+  }
+
+}
+
+
+@media only screen and (min-width: 1201px) and (max-width: 1440px) {
+  .container {
+    margin: 7% 10% 0 10%;
+
+  }
+
+}
+
+@media only screen and (min-width: 320px) and (max-width: 576px) {
+  .container {
+    margin: 60% 2% 0 2%;
+
+  }
+
+  .gridContainer, .gridContainerAdm  {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Alterado */
+    grid-template-rows: auto; /* Alterado */
+    gap: 2em;
+    color: #146b97;
+    max-width: 100%;
+  }
+
+
+  .titulo {
+    font-size: 0.7em;
+    margin-bottom: 0.5em;
+  }
+
+  .autor {
+    font-size: 0.6em;
+  }
+
+  .editora {
+    font-size: 0.5em;
+  }
+
+  .buttonCompra {
+    height: 2.5em;
+  }
+
+  .precoAntigo {
+    font-size: 1em;
+  }
+
+  .precoOferta,
+  .precoRegular {
+    font-size: 1em;
+  }
+
+  .ficha1,
+  .ficha2 {
+    padding: 10px;
+  }
+
+  .ficha1,
+  .ficha2,
+  .fichaBolean,
+  .fichaAdm {
+    font-size: 14px;
+  }
+
+  .inputAdm,
+  .inputAdmSinopse,
+  .inputAdmImagem {
+    margin: 0.2em 0 0 0;
+    height: 2em;
+    padding: 5px;
+    padding-left: 10px;
+    border-radius: 7px;
+    box-sizing: border-box;
+    font-size: 12px;
+  }
+
+  .inputAdmSinopse {
+    height: 10em;
+  }
+
+  .inputAdmImagem {
+    height: 3em;
+  }
+
+  .voltarHome {
+    font-size: 14px;
+  }
+
+
+  .buttonCardAdm {
+    font-size: 16px;
+    height: 2em;
+    width: 10em;
+    margin: 5px 0px 5px 20px;
+  }
+
+  .buttonFecharModal {
+    width: 1.5em;
+    height: 1.3em;
+  }
+
+  .imagemLivro{
+    width: 50%;
+  }
+}
+
+
+
 
