--- a/frontend/src/components/layout/Footer.module.css
+++ b/frontend/src/components/layout/Footer.module.css
@@ -117,11 +117,18 @@ a:link {text-decoration: none;}
     text-align: center;
 }
 
+@media only screen and (min-width: 320px){
+  .containerFooter{
+    width: 105%;
+  }
+}
+
 /* Ajustes para telas menores que 576px */
 @media only screen and (min-width: 320px) and (max-width: 576px) {
   .containerFooter {
     grid-template-columns: 1fr;
     grid-template-rows: auto;
+    
   }
 
   .socialListLi {
