--- a/frontend/src/components/adm/CadastroLivro.module.css
+++ b/frontend/src/components/adm/CadastroLivro.module.css
@@ -1,12 +1,10 @@
-.containerCadastroLivro{
+.containerCadastroLivro {
   margin-top: 150px;
   justify-content: space-between;
   width: 100%;
-
 }
 
-
-.tituloCadastroLivro{
+.tituloCadastroLivro {
   color: #146b97;
 }
 
@@ -16,13 +14,14 @@
   margin-top: 1em;
 }
 
-.buttonExpandir, .buttonCadastrar{
-  color: #146b97; 
+.buttonExpandir,
+.buttonCadastrar {
+  color: #146b97;
   font-size: 20px;
   font-weight: bold;
   height: 2em;
   width: 15em;
-  background:rgb(205, 231, 255);
+  background: rgb(205, 231, 255);
   margin-top: 20px;
   border: none;
   border-radius: 7px;
@@ -30,64 +29,91 @@
   cursor: pointer;
 }
 
-.buttonExpandir:hover, .buttonCadastrar:hover{
+.buttonExpandir:hover,
+.buttonCadastrar:hover {
   background-color: #033579;
   color: white;
 }
 
-.labelCadastro{
+.labelCadastro {
   color: #146b97;
   font-weight: bold;
 }
 
-.containerSmall, .containerLong, .containerTtipoLivro{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.textArea {
+  width: 100%;
+  background: aliceblue;
+  border: none;
+  box-sizing: border-box;
+  padding: 5px;
+  height: 10em; /* ajuste a altura conforme necessário */
+  resize: vertical; /* permitir redimensionamento vertical */
 }
 
- 
+.textArea:focus {
+  outline: none;
+}
 
-  .inputSinopseCadastrar, .inputImagemCadastrar, .inputCadastrar{
-    margin: 0.2em 0 0 0;
+.containerSmall,
+.containerLong,
+.containerTtipoLivro {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.inputSinopseCadastrar,
+.inputImagemCadastrar,
+.inputCadastrar {
+  margin: 0.2em 0 0 0;
+  width: 100%;
+  height: 3em;
+  padding: 5px;
+  padding-left: 10px;
+  border: none;
+  border-radius: 7px;
+  box-sizing: border-box;
+  color: #033579;
+  background: aliceblue;
+}
+
+.inputCadastrar {
+  width: 550px;
+}
+
+.inputSinopseCadastrar::-webkit-scrollbar,
+.inputImagemCadastrar::-webkit-scrollbar,
+.inputCadastrar::-webkit-scrollbar {
+  width: 0px;
+  background: transparent;
+}
+
+.inputSinopseCadastrar:focus,
+.inputImagemCadastrar:focus,
+.inputCadastrar:focus {
+  outline: none;
+}
+
+.inputAdmSinopse {
+  height: 20em;
+  text-align: justify;
+}
+
+.inputAdmImagem {
+  height: 5.5em;
+  text-align: justify;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 576px) {
+  .inputSinopseCadastrar,
+  .inputImagemCadastrar,
+  .inputCadastrar,
+  .buttonExpandir,
+  .buttonCadastrar {
     width: 100%;
-    height: 3em;
-    padding: 5px;
-    padding-left: 10px;
-    border: none;
-    border-radius: 7px;
-    box-sizing: border-box;
-    color: #033579;
-    background: aliceblue;
-  }
-
-.inputCadastrar{
-    width: 550px;
   }
   
-  .inputSinopseCadastrar::-webkit-scrollbar,
-  .inputImagemCadastrar::-webkit-scrollbar,
-  .inputCadastrar::-webkit-scrollbar{
-    width: 0px;
-    background: transparent;
-  } 
-
-
-  .inputSinopseCadastrar:focus, .inputImagemCadastrar:focus,
-  .inputCadastrar:focus {
-    outline: none;
+  .inputCadastrar {
+    max-width: 400px;
   }
-
-  .inputAdmSinopse{
-    height: 20em;
-    text-align: justify;
-  }
-
-  .inputAdmImagem{
-    height: 5.5em;
-    text-align: justify;
-  }
-
-
-  
-  
+}
