--- a/frontend/src/components/adm/CadastroLivro.module.css
+++ b/frontend/src/components/adm/CadastroLivro.module.css
@@ -14,6 +14,7 @@
   margin-top: 1em;
 }
 
+
 .buttonExpandir,
 .buttonCadastrar {
   color: #146b97;
@@ -40,6 +41,13 @@
   font-weight: bold;
 }
 
+.tipoLivro{
+  color: #146b97;
+  font-weight: bold;
+  margin-bottom: 1em;
+}
+
+
 .textArea {
   width: 100%;
   background: aliceblue;
@@ -65,9 +73,9 @@
 .inputSinopseCadastrar,
 .inputImagemCadastrar,
 .inputCadastrar {
-  margin: 0.2em 0 0 0;
+  margin: 0.4em 0;
   width: 100%;
-  height: 3em;
+  height: 2.5em;
   padding: 5px;
   padding-left: 10px;
   border: none;
@@ -103,6 +111,32 @@
   height: 5.5em;
   text-align: justify;
 }
+
+.inputCadastrar [type="checkbox"] {
+  width: 1.2em;
+  height: 1.2em;
+  border: 2px solid #146b97;
+  background-color: #146b97;
+  border-radius: 4px;
+  margin: 6px 4px 0 4px;
+}
+
+.inputCadastrar[type="checkbox"]:checked {
+
+  border: 2px solid #146b97;
+  background-color: #146b97;
+  border-radius: 4px;
+
+}
+
+.inputCadastrar label {
+  font-size: 1em;
+  text-align: center;
+  color: #146b97;
+  font-weight: bolder;
+}
+
+
 
 @media only screen and (min-width: 320px) and (max-width: 576px) {
   .inputSinopseCadastrar,
